Fix #117424: Sculpt undo misses changes propagated to shape keys

For modification the important point is that to propagate changes to
other keys it's necessary to know what the changes are, which means
comparing the old an new values, so you can't modify shape key data
in place.